# discord-chat-bot

./: .gitignore  META_QUESTION_FIX_SUMMARY.md  README.md  SMART_RETRIEVAL_SOLUTION.md  STANDALONE_USAGE.md  deploy.py  discord_app.py  eval_app.py  interactive_qa.py  label_data_flask.py  llm_judge_eval.ipynb  pyproject.toml  requirements-modal.txt  requirements.txt  standalone_vector_emb.py  start_bot.py  stop_bot.py  test_bot_local.py  test_modal_deployment.py  test_new_bot.py  verify_bot_setup.py
.specstory/history/: 2025-04-28_12-27-unit-tests-for-case-insensitive-bot-matching.md
chroma_db/: chroma.sqlite3
data/: WS-Topics.md  WS5-C2.vtt
data/eval/: questions.txt  responses.tsv  responses_0b9a4f6d-6598-419e-951f-4b4112197a45.tsv  responses_3763bcea-f4c6-4ba4-973b-e08c6b70b366.tsv  responses_5e6e98a6-ca47-4b49-9b71-2010c7a9b494.tsv  responses_739bd2d6-5e18-4eb8-9e7f-70d4267a24a8.tsv  responses_8ea610fa-19ee-44be-9fa4-a75eb2760c91.tsv  responses_de230c2f-44ef-47e9-9dd1-c32968f50ebe.tsv  responses_e6e69846-f4d1-44ec-8357-0d2a3a870b69.tsv  responses_f273adc8-d0ee-4181-ad14-4e2a0ea52c73.tsv
eval/: eval_progress.json  eval_retrieval.json  eval_retrieval_questions.json  evaluate_system.py  evaluation_results_20250626_023151.json  qa_pairs-llm-judged.json  qa_pairs.json  questions.json  test_retrieval.py
scripts/: refresh_database.py
src/: Untitled.ipynb  bot_interactions.db  database.py  deploy_all.py  deploy_datasette.py  discord-answer-logs.db  discord_app.py  enhanced_workshop_retrieval.py  eval.py  meta_question_handler.py  minimal_discord_bot.py  modal_datasette.py  modal_discord.py  modal_discord_bot.py  multi_workshop_vector.py  process_transcript.py  retrieval_pipeline.ipynb  smart_workshop_retrieval.py  test_meta_detection.py  test_meta_fix.py  test_retrieval.py  test_smart_retrieval.py  track_db.py  transcript.py  vector_emb.py  wandb_logger.py  webserver.py  workshop_bot_integration.py
src/.ipynb_checkpoints/: testin_notebook-checkpoint.ipynb
tests/: test_discord_app.py
wandb/: latest-run
wandb/run-20250422_120316-qdqlnet2/: run-qdqlnet2.wandb
wandb/run-20250422_120439-w9qkpv9k/: run-w9qkpv9k.wandb
wandb/run-20250422_120605-fc1cudzp/: run-fc1cudzp.wandb
wandb/run-20250422_120928-23texp9q/: run-23texp9q.wandb
wandb/run-20250422_121902-nmjuoaaf/: run-nmjuoaaf.wandb
wandb/run-20250422_123802-7mout7if/: run-7mout7if.wandb
wandb/run-20250422_124144-ezvfp39d/: run-ezvfp39d.wandb
wandb/run-20250422_132947-0rjkx3kc/: run-0rjkx3kc.wandb
(+112 files in other folders)
